Bug #11339
getent: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
dogetserv.c: In function 'dogetserv': dogetserv.c:86:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] key[sizeof (key) - 1] = NULL; ^ dogetserv.c:89:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *cp = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 142d813a06c6f9a6142e2c276b62129a17a31a65
commit 142d813a06c6f9a6142e2c276b62129a17a31a65 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-11T15:32:37.000Z 11339 getent: NULL pointer errors Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@joyent.com>